US234004 fixed accordion caret size in edge, removed overflow scroll on body.

--- a/elements/pfe-navigation/src/pfe-navigation--lightdom.scss
+++ b/elements/pfe-navigation/src/pfe-navigation--lightdom.scss
@@ -206,10 +206,10 @@
                 }
             }
         }
-        &[is_nested]:not(.expanded):not([parent_hidden]) .pfe-navigation-item__trigger.pfe-navigation-item::after {
-            height: .5em;
-            width: .5em;
-            top: 22px;
+        &[is_nested]:not([parent_hidden]) .pfe-navigation-item__trigger.pfe-navigation-item::after {
+            height: .5em !important;
+            width: .5em !important;
+            top: 22px !important;
         }
     }
 
